# grizzly

./: .gitignore  AllPassFilter.hpp  AnalogOnePoleFilter.hpp  Biquad.hpp  CMakeLists.txt  Cascade.hpp  CombFilter.hpp  Convolution.hpp  CrossOverFilter.hpp  CrossoverFilter.hpp  Delay.hpp  DownSample.hpp  Dynamic.hpp  EnvelopeDetector.hpp  FastFourierTransformBase.hpp  FirstOrderCoefficients.hpp  FirstOrderFilter.hpp  ModulatedDelay.hpp  MultiCrossOverFilter.hpp  MultiCrossoverFilter.hpp  MultiTapResonator.hpp  PhaseGenerator.hpp  PinkNoise.hpp  Saw.hpp  SegmentEnvelope.hpp  Sine.hpp  Square.cpp  Square.hpp  Triangle.hpp  UpSample.hpp  Waveform.hpp  Window.hpp  all_pass_filter.hpp  analog_envelope.hpp  analog_one_pole_filter.hpp  analytic_transform.hpp  band_eq.hpp  bicube.hpp  bicube_coefficients.hpp  biquad.hpp  (+78 more)
Ooura/: fftsg.cpp
apple/: fast_fourier_transform_accelerate.cpp  fast_fourier_transform_accelerate.hpp
ooura/: fast_fourier_transform_ooura.cpp  fast_fourier_transform_ooura.hpp  fftsg.cpp  fftsg.hpp
test/: Biquad.cpp  CMakeLists.txt  Convolution.cpp  Delay.cpp  Dynamic.cpp  FirstOrderFilter.cpp  Spectrum.cpp  Waveform.cpp  Window.cpp  all_pass_filter.cpp  analog_one_pole_filter.cpp  analytic_transform.cpp  cepstrum.cpp  circular_buffer.cpp  comb_filter.cpp  complex.cpp  down_sample.cpp  even_odd.cpp  fast_fourier_transform_accelerate.cpp  fast_fourier_transform_ooura.cpp  first_order_filter.cpp  gordon_smith_oscillator.cpp  high_frequency_content.cpp  hilbert_transform.cpp  impulse_response.cpp  main.cpp  mid_side.cpp  multi_tap_resonator.cpp  segment_envelope.cpp  spectral_centroid.cpp  up_sample.cpp  z_transform.cpp
